resolved missing method for mod t, pre wrap in itembox-statsgroup

--- a/css/common.css
+++ b/css/common.css
@@ -28,7 +28,7 @@
     display: none;
 }
 
-.stats {
+.stats, .itembox-statsgroup {
     white-space: pre;
 }
 
